# termonad

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  Setup.hs  cabal.project  default.nix  desktop_file_dont_know_what_name_should_be  flake.nix  hie.yaml  shell.nix  stack-lts-11.yaml  stack-lts-12.yaml  stack-lts-13.yaml  stack-lts-14.yaml  stack-lts-9.yaml  stack-nightly.yaml  stack.yaml  termonad.cabal
.github/: FUNDING.yml
.github/workflows/: ci.yml
.nix-helpers/: bare.nix  fixed-stack.nix  gi-vte.nix  macos-gobject-introspection-rpath.patch  nixops.nix  nixos-vm.nix  nixpkgs.nix  overlays.nix  running-termonad.nix  simple-cabal-shell.nix  stack-fhs-env.nix  stack-nix-shell.nix  stack-shell.nix  termonad-with-packages.nix  termonad.nix
.nix-helpers/patches/: gdk.patch
app/: Main.hs
bench/: Bench.hs
example-config/: ExampleColourExtension.hs  ExampleDraculaColourExtension.hs  ExampleGruvboxColourExtension.hs  ExampleOneDarkProColourExtension.hs  ExamplePaperColourColourExtension.hs  ExampleSelenizedColourExtension.hs  ExampleSolarizedColourExtension.hs
glade/: README.md  preferences.glade
scripts/: hackage-docs.sh  upload-with-cabal.sh
src/: Termonad.hs
src/Termonad/: App.hs  Cli.hs  Config.hs  FocusList.hs  FocusedList.hs  Gtk.hs  IdMap.hs  Keys.hs  Lenses.hs  Pcre.hs  Preferences.hs  PreferencesFile.hs  Prelude.hs  Startup.hs  Term.hs  Types.hs  Window.hs  XML.hs
src/Termonad/Config/: Colour.hs  Extension.hs  Vec.hs
src/Termonad/IdMap/: Internal.hs
src/Termonad/Preferences/: File.hs
test/: DocTest.hs  Test.hs
test/Test/: FocusList.hs
test/Test/FocusList/: Invariants.hs
